--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;
+    gap: 12px;
+}
+
+
+.header-top {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 header .logo {
@@ -77,7 +86,7 @@ header .logo img {
     aspect-ratio: 4000/2048;
     background: rgb(0, 0, 0);
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(166, 20, 20, 0) 100%);
-    top: 66px;
+    top: 110px;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -346,4 +355,55 @@ header .logo img {
     text-decoration: none;
     justify-self: flex-end;
     padding: 10px 0;
+}
+
+.header-search-box {
+    width: 100%;
+    height: 32px;
+    display: flex;
+}
+
+.header-search-box form {
+    width: 100%;
+    height: 32px;
+    display: flex;
+}
+
+.header-search {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px 0 0 20px;
+    border: 1px solid #ccc;
+    border-right: none;
+    padding: 0 10px;
+    outline: none;
+}
+
+.header-search-box button {
+    background-color: transparent;
+    outline: none;
+}
+
+.h-search-clear {
+    width: auto;
+    height: 100%;
+    border: none;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px;
+}
+
+.h-search-search {
+    width: auto;
+    height: 100%;
+    border: 1px solid #ccc;
+    padding: 0 10px;
+    border-radius: 0 20px 20px 0;
+    border-left: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
