--- a/style.css
+++ b/style.css
@@ -108,6 +108,13 @@ header .logo img {
     border: 2px solid #fff;
     margin-top: 8px;
     font-size: 20px;
+    transition: .2s all ease-in-out;
+}
+
+.banner1-overlay button:hover {
+    border: 2px solid #fff;
+    background-color: #fff;
+    color: #000;
 }
 
 .categories {
@@ -181,6 +188,7 @@ header .logo img {
 
 .sell-item {
     width: 45%;
+    max-width: 200px;
     aspect-ratio: 1/1;
     flex-grow: 100px;
     flex-basis: 1;
@@ -373,7 +381,7 @@ header .logo img {
     width: 100%;
     height: 100%;
     border-radius: 20px 0 0 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #555;
     border-right: none;
     padding: 0 10px;
     outline: none;
@@ -388,8 +396,8 @@ header .logo img {
     width: auto;
     height: 100%;
     border: none;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #555;
+    border-bottom: 1px solid #555;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -399,7 +407,8 @@ header .logo img {
 .h-search-search {
     width: auto;
     height: 100%;
-    border: 1px solid #ccc;
+    border: none;
+    border: 1px solid #555;
     padding: 0 10px;
     border-radius: 0 20px 20px 0;
     border-left: none;
